add neon lights

--- a/styles/base.less
+++ b/styles/base.less
@@ -93,13 +93,14 @@ atom-text-editor .search-results .syntax--marker.current-result .region {
 
 .syntax--constant {
   color: @orange;
+  text-shadow: 0 0 2px @orange-shadow;
 
   &.syntax--character.syntax--escape {
     color: @cyan;
   }
 
   &.syntax--numeric {
-    color: @orange;
+    color: @light-orange;
   }
 
   &.syntax--other.syntax--color {
