--- a/styles/colors.less
+++ b/styles/colors.less
@@ -14,7 +14,8 @@
 @green-shadow: rgba(0, 200, 83,0.8);
 @red: #F44336;
 @orange: #FF9800;
+@orange-shadow: rgba(255, 152, 0,0.8);
 @light-orange: #FFC107;
 @yellow: #FFEB3B;
-@yellow-shadow: rgba(255, 235, 59,0.8);
+@yellow-shadow: rgba(255, 235, 59,0.6);
 @pink: #E91E63;
