update neon light

--- a/styles/base.less
+++ b/styles/base.less
@@ -96,7 +96,7 @@ atom-text-editor .search-results .syntax--marker.current-result .region {
   text-shadow: 0 0 2px @orange-shadow;
 
   &.syntax--character.syntax--escape {
-    color: @cyan;
+    color: @light-orange;
   }
 
   &.syntax--numeric {
@@ -104,7 +104,7 @@ atom-text-editor .search-results .syntax--marker.current-result .region {
   }
 
   &.syntax--other.syntax--color {
-    color: @cyan;
+    color: @orange;
   }
 
   &.syntax--other.syntax--symbol {
@@ -114,7 +114,7 @@ atom-text-editor .search-results .syntax--marker.current-result .region {
 
 .syntax--variable {
   color: @blue;
-
+  text-shadow: 0 0 2px @blue-lightshadow;
   &.syntax--interpolation {
     color: darken(@red, 10%);
   }
