--- a/styles/colors.less
+++ b/styles/colors.less
@@ -8,14 +8,15 @@
 @white: #F5F5F5;
 @cyan: #8abeb7;
 @blue: #2196F3;
-@blue-shadow: rgba(33, 150, 244,0.8);
+@blue-lightshadow: rgba(33, 150, 244, 0.2);
+@blue-shadow: rgba(33, 150, 244, 0.8);
 @purple: #673AB7;
 @green: #00C853;
-@green-shadow: rgba(0, 200, 83,0.8);
+@green-shadow: rgba(0, 200, 83, 0.8);
 @red: #F44336;
-@orange: #FF9801;
-@orange-shadow: rgba(255, 152, 0,0.8);
+@orange: #FF9800;
+@orange-shadow: rgba(255, 152, 0, 0.8);
 @light-orange: #FFC107;
 @yellow: #FFEB3B;
-@yellow-shadow: rgba(255, 235, 59,0.6);
+@yellow-shadow: rgba(255, 235, 59, 0.6);
 @pink: #E91E63;
